Fix: Rewards Modal - fix progress bar labels position on mobile.

--- a/src/components/Modals/WalletTokenModal/WalletTokenModal.scss
+++ b/src/components/Modals/WalletTokenModal/WalletTokenModal.scss
@@ -411,6 +411,7 @@ $badge-size-height: 90px;
                 span {
                     white-space: nowrap;
                     bottom: 40px;
+                    left: -30px;
                 }
             }
        }
